Read duration request parameter
